# daemonize

./: .gitignore  Android.mk  Application.mk  CHANGELOG  CHANGELOG.md  FAQ-header.html  FAQ.md  LICENSE  LICENSE.md  Makefile.in  README  README.md  _config.yml  acconfig.h  android-config.h  basename.c  changelog-header  config.h  config.h.in  configure  configure.ac  configure.in  daemon.c  daemonize.1  daemonize.c  daemonize.html  flock.c  flock.h  getopt.c  index.md  license.md  setenv.c  strerror.c  testdaemon.c  version.h
_includes/: footer.html  header.html
_layouts/: default.html  license.html  withTOC.html
